2012-02-23  Albert Chu <chu11@llnl.gov>

	Merge sha256 branch.

	* Support Cipher Suite 15 and 16 globally.

	* Add details of Cipher Suite 18 and 19 globally.

	* bmc-config/bmc-config-rmcpplus-conf-privilege-section.c
	(bmc_config_rmcpplus_conf_privilege_section_get): Add
	configuration for Maximum_Privilege_Cipher_Suite_Id_15.
	
2012-02-22  Albert Chu <chu11@llnl.gov>

	* bmc-config/bmc-config-rmcpplus-conf-privilege-section.c
	(id_checkout): Fix cipher suite privilege
	configuration corner cases workaround on HP DL145.

	* man/manpage-common-workaround-outofband-20-text.man: Document
	Intel S2600JF/Appro 512X workaround.

	* bmc-config/bmc-config-rmcpplus-conf-privilege-section.c (_rmcpplus_cipher_suite_id_privilege_setup):
	Workaround cipher suite privilege configuration bug in Intel
	S2600JF/Appro 512X.
	
2012-02-22  Albert Chu <chu11@llnl.gov>

	* common/toolcommon/tool-cmdline-common.c (common_parse_opt),
	common/toolcommon/tool-config-file-common.c
	(_config_file_cipher_suite_id): Differentiate between invalid and
	unsupported cipher suites in error message output.
	
2012-02-21  Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-bugs-issues-and-workarounds.txt,
	man/ipmi-sensors.8.pre.in: Update information concerning
	'discretereading' workaround.

	* ipmi-sensors/: Code cleanup, rename 'reading' to
	'sensor_reading' for consistency.

	* libfreeipmi/cmds/ipmi-lan-cmds.c: Fix packet layout for
	tmpl_cmd_get_lan_configuration_parameters_rmcpplus_messaging_cipher_suite_entry_support_rs.
	
	* doc/freeipmi-faq.texi: Add Powerman configuration notes for
	C410x.  Fix various parts.
	
2012-02-17  Albert Chu <chu11@llnl.gov>

	* ipmipower/: Various code cleanup.  Change "DIAG_INTR" to
	"DIAGNOSTIC_INTERRUPT" in code for readability.  Make code
	consistent to other codein FreeIPMI.  Add asserts as needed.

	* Globally: Various code cleanup.  Use switch statements where it
	would be more appropriate for performance improvements.
	
2012-02-17  Albert Chu <chu11@llnl.gov>
