@@ -327,6 +327,9 @@ typedef enum
   ((__m) >= IPMIPOWER_MSG_TYPE_ON             \
    && (__m) <= IPMIPOWER_MSG_TYPE_BMC_ERROR)
 
+#define IPMIPOWER_MSG_TYPE_ERROR_MIN IPMIPOWER_MSG_TYPE_UNKNOWN
+#define IPMIPOWER_MSG_TYPE_ERROR_MAX IPMIPOWER_MSG_TYPE_BMC_ERROR
+
 #define IPMIPOWER_MSG_TYPE_NUM_ENTRIES (IPMIPOWER_MSG_TYPE_BMC_ERROR + 1)
 
 /* ipmipower_powercmd
