@@ -110,6 +110,8 @@ Show all difference between the current configuration and the chassis-data2.conf
 .PP
 Commit all configuration values from the chassis-data1.conf file.
 .PP
+#include <@top_srcdir@/man/manpage-common-diagnostics.man>
+#include <@top_srcdir@/man/manpage-common-diagnostics-hostranged-text.man>
 #include <@top_srcdir@/man/manpage-common-known-issues.man>
 #include <@top_srcdir@/man/manpage-common-reporting-bugs.man>
 .SH "COPYRIGHT"
