@@ -83,6 +83,18 @@ List nodes in newline separated list
 List nodes in space separated list
 .LP
 #include <@top_srcdir@/man/manpage-common-hostranged-text-main.man>
+.SH "DIAGNOSTICS"
+The exit value of
+.B ipmidetect
+depends on the options performed on the command line.  If the default
+output is used, the exit value will be 0 if the command succeeds
+without error.  If the --detected option is used and no undetected
+nodes have been discovered, the exit value will be 0.  If undetected
+nodes are found, the exit value will be 1.  If the --undetected option
+is used and no detected nodes have been discovered, the exit value
+will be 0.  If detected nodes are found, the exit value will be 1.  On
+errors, the exit value will be 2.
+
 #include <@top_srcdir@/man/manpage-common-reporting-bugs.man>
 .SH COPYRIGHT
 Copyright (C) 2007-2012 Lawrence Livermore National Security, LLC.
