@@ -17,6 +17,10 @@ o In bmc-config, add configuration support for
   Maximum_Privilege_Cipher_Suite_Id_15 under RMCPplus_Conf_Privilege.
 o Globally support Cipher Suite ID 15 and 16 based on comments from
   Intel.
+o In ipmipower, exit with value 1 on IPMI errors in addition to system
+  errors.
+o In ipmidetect, exit with exit value 2 when an error occurs.  Exit
+  value of 0 or 1 are reserved for scripting.
 
 Libraries
 ---------
@@ -28,6 +32,7 @@ o In libfreeipmi, add Cipher Suite 18 and 19 information, but do not
  
 Misc
 ----
+o Add diagnostic/exit-value information to most manpages. 
 
 FreeIPMI 1.1.1 - 01/03/12
 -------------------------
